<resources>
    <string name="app_name">uGet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification_service_running">Service running</string>
    <string name="notification_active_counts">Active : %d</string>
    <string name="notification_error_title">Error Occurred</string>
    <string name="notification_error_content">Error occurred during download.</string>
    <string name="notification_completed_title">Download Completed</string>
    <string name="notification_completed_content">All queuing downloads have been completed.</string>
    <string name="notification_channel_service">Service</string>
    <string name="notification_channel_normal">Normal</string>
    <string name="notification_channel_completed">Download Completed</string>
    <string name="notification_channel_error">Error Occurred</string>
    <string name="cnode_name">Name</string>
    <string name="cnode_name_all">All Category</string>
    <string name="cnode_name_new">New %d</string>
    <string name="cnode_name_copy">Copy of %s</string>
    <string name="cnode_name_not_set">No Category Name, please set it.</string>
    <string name="cnode_active_limit">Active downloads</string>
    <string name="cnode_finished_limit">Capacity of Finished</string>
    <string name="cnode_recycled_limit">Capacity of Recycled</string>
    <string name="cnode_hosts">Matched hosts</string>
    <string name="cnode_schemes">Matched schemes</string>
    <string name="cnode_file_types">Matched types</string>
    <string-array name="cnode_state">                      
        <item>All Status</item>
        <item>Active</item>
        <item>Queuing</item>
        <item>Finished</item>
        <item>Recycled</item>
    </string-array>
    <string name="dnode_startup">Startup</string>
    <string name="dnode_startup_auto">Auto start</string>
    <string name="dnode_startup_manually">Manually start</string>
    <string name="dnode_uri">URI</string>
    <string name="dnode_uri_not_set">No Download URI, please set it.</string>
    <string name="dnode_mirrors">Mirrors</string>
    <string name="dnode_file">File</string>
    <string name="dnode_file_placeholder">Leave blank to use default filename …</string>
    <string name="dnode_folder">Folder</string>
    <string name="dnode_user">User</string>
    <string name="dnode_password">Password</string>
    <string name="dnode_connections">Max connections</string>
    <string name="dnode_time_left">%s left</string>
    <string name="dnode_retry_counts">Retry %d</string>
    <string name="dnode_retry_limit">Retry limit</string>
    <string name="dnode_referrer">Referrer</string>
    <string-array name="dnode_proxy_type">
        <item>"Don't use"</item>
        <item>"Default"</item>
        <item>"HTTP"</item>
        <item>"SOCKS v4"</item>
        <item>"SOCKS v5"</item>
    </string-array>
    <string name="dnode_proxy_host">Host</string>
    <string name="dnode_proxy_port">Port</string>
    <string name="dnode_proxy_user">User</string>
    <string name="dnode_proxy_password">Password</string>
    <string name="batch_memory_alloc_failed">Error : Memory allocation failure.</string>
    <string name="batch_remaining_counts">Remaining : %d</string>
    <string name="batch_total_counts">Total counts : %d</string>
    <string name="batch_hints">If you produce large amount of download, uGet may consume much time to process.</string>
    <string name="batch_seq_wildcard_1">1st wildcard(*)</string>
    <string name="batch_seq_wildcard_2">2nd wildcard(*)</string>
    <string name="batch_seq_wildcard_3">3rd wildcard(*)</string>
    <string name="batch_seq_eg">e.g.</string>
    <string name="batch_seq_to">To:</string>
    <string name="batch_seq_digits">digits:</string>
    <string name="batch_seq_case_sensitive">case-sensitive</string>
    <string name="batch_seq_msg_no_wildcard">No wildcard(*) character in URI entry.</string>
    <string name="batch_seq_msg_no_from_to">No character in \'From\' or \'To\' entry.</string>
    <string name="batch_seq_msg_uri_not_valid">URI is not valid.</string>
    <string name="batch_seq_preview">Preview</string>
    <string name="action_start">Start</string>
    <string name="action_pause">Pause</string>
    <string name="action_file">File</string>
    <string name="action_category_new">New category…</string>
    <string name="action_category_import">Import category…</string>
    <string name="action_category_edit">Edit category…</string>
    <string name="action_category_export">Export category…</string>
    <string name="action_save_all">Save all</string>
    <string name="action_category_delete">Delete category</string>
    <string name="action_batch">Batch</string>
    <string name="action_batch_sequence">URL Sequence batch</string>
    <string name="action_resume_all">Resume all</string>
    <string name="action_pause_all">Pause all</string>
    <string name="action_offline">Offline</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="menu_download_open">Open</string>
    <string name="menu_download_delete">Delete</string>
    <string name="menu_download_delete_recycle">Delete (Recycle)</string>
    <string name="menu_download_delete_data">Delete Entry</string>
    <string name="menu_download_delete_file">Delete Entry and File</string>
    <string name="menu_download_force_start">Force Start</string>
    <string name="menu_download_move">Move</string>
    <string name="menu_download_move_up">Move Up</string>
    <string name="menu_download_move_down">Move Down</string>
    <string name="menu_download_priority">Priority</string>
    <string name="menu_download_priority_high">High</string>
    <string name="menu_download_priority_normal">Normal</string>
    <string name="menu_download_priority_low">Low</string>
    <string name="pref_ui">User interface</string>
    <string name="pref_sort">Download sorting…</string>
    <string name="pref_sort_summary">If user choose "All Category" or "All Status", sorting downloads by…</string>
    <string name="pref_sort_entrie_default">0</string>
    <string name="pref_ui_confirm_delete">Confirm delete</string>
    <string name="pref_ui_confirm_delete_summary">Confirm when deleting files</string>
    <string name="pref_ui_confirm_exit">Confirm exit</string>
    <string name="pref_ui_confirm_exit_summary">Show confirmation dialog on exit</string>
    <string name="pref_ui_exit_on_back">Exit on back pressed</string>
    <string name="pref_ui_exit_on_back_summary">Exiting uGet when user press back button.</string>
    <string name="pref_ui_notification_starting">Download starting notification</string>
    <string name="pref_ui_notification_starting_summary">Show notification when download starting.</string>
    <string name="pref_ui_notification_sound">Sound when download is finished</string>
    <string name="pref_ui_notification_sound_summary">Sound when download is finished or error occurred. In Android 8 and above, you must modify system setting about app notification</string>
    <string name="pref_ui_notification_vibrate">Vibrate when download is finished</string>
    <string name="pref_ui_notification_vibrate_summary">Vibrate when download is finished or error occurred. In Android 8 and above, you must modify system setting about app notification</string>
    <string name="pref_ui_no_wifi_go_offline">Go offline if no WiFi connection</string>
    <string name="pref_ui_no_wifi_go_offline_summary">Program will enable/disable offline mode if WiFi has disconnected/connected.</string>
    <string name="pref_ui_skip_existing_uri">Skip existing URI</string>
    <string name="pref_ui_skip_existing_uri_summary">Enable this option if you don\'t want to add existed URI again.</string>
    <string name="pref_clipboard">Clipboard</string>
    <string name="pref_clipboard_monitor">Clipboard monitor</string>
    <string name="pref_clipboard_monitor_summary">Enable/Disable clipboard monitor</string>
    <string name="pref_clipboard_media_website">Monitor URL of media website</string>
    <string name="pref_clipboard_media_website_summary">Monitor URL of media website if uGet support this site.</string>
    <string name="pref_clipboard_type">File types</string>
    <string name="pref_clipboard_type_summary">Monitor clipboard for specified file types (support Regular Expression)</string>
    <string name="pref_clipboard_index">Default category index</string>
    <string name="pref_clipboard_index_summary">Adding URL to Nth category if no category matched</string>
    <string name="pref_clipboard_clear_at_exit">Clear clipboard at exit</string>
    <string name="pref_clipboard_clear_at_exit_summary">Clear clipboard data at exit</string>
    <string name="pref_clipboard_clear_after_accepting">Clear clipboard after accepting URL</string>
    <string name="pref_clipboard_clear_after_accepting_summary">Clear clipboard data after uGet accept a downloadable URL.</string>
    <string name="pref_speed">Speed limit</string>
    <string name="pref_plugin_order">Plug-in matching order…</string>
    <string name="pref_plugin_order_summary">Select primary and secondary plug-in.</string>
    <string name="pref_plugin_order_entrie_default">0</string>
    <string name="pref_aria2">Aria2 plug-in options</string>
    <string name="pref_aria2_uri">URI</string>
    <string name="pref_aria2_uri_summary">Setup URI for aria2 JSON-RPC</string>
    <string name="pref_aria2_token">RPC authorization secret token</string>
    <string name="pref_aria2_token_summary">Setup this value the same as your aria2 server.</string>
    <string name="pref_aria2_local">Run aria2 in this device</string>
    <string name="pref_aria2_local_summary">Launch aria2 server in this device. You must install aria2c by yourself.
        I recommend install Aria2Android from Google Play and disable this option.</string>
    <string name="pref_aria2_speed_download">Download speed limit for aria2</string>
    <string name="pref_aria2_speed_download_summary">Setup download speed limit (KiB/s), it only affect aria2 plug-in.</string>
    <string name="pref_aria2_speed_upload">Upload speed limit for aria2</string>
    <string name="pref_aria2_speed_upload_summary">Setup upload speed limit (KiB/s), it only affect aria2 plug-in.</string>
    <string name="pref_aria2_launch">Launch aria2</string>
    <string name="pref_aria2_launch_summary">Launch aria2 on startup</string>
    <string name="pref_aria2_shutdown">Shutdown aria2</string>
    <string name="pref_aria2_shutdown_summary">Shutdown aria2 on exit</string>
    <string name="pref_aria2_path">Path</string>
    <string name="pref_aria2_path_summary">Full path of aria2 program</string>
    <string name="pref_aria2_args">Arguments</string>
    <string name="pref_aria2_args_summary">Passing arguments to aria2</string>
    <string name="pref_media">Media website</string>
    <string name="pref_media_match_mode">Media matching mode</string>
    <string name="pref_media_match_mode_summary">Setup media matching mode</string>
    <string name="pref_media_match_mode_entrie_default">3</string>
    <string name="pref_media_quality">Media Quality</string>
    <string name="pref_media_quality_summary">Setup media matching condition - Quality</string>
    <string name="pref_media_quality_entrie_default">3</string>
    <string name="pref_media_type">Media Type</string>
    <string name="pref_media_type_summary">Setup media matching condition - Type</string>
    <string name="pref_media_type_entrie_default">1</string>
    <string name="pref_other">Other</string>
    <string name="pref_autosave_interval">Autosave Interval</string>
    <string name="pref_autosave_interval_summary">Save all data every N minutes. If you want to disable autosave, set it to 0.</string>
</resources>