<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_file"
        android:icon="@drawable/ic_archive"
        android:title="@string/action_file"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/action_category_new"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/action_category_new" />

            <item
                android:id="@+id/action_category_import"
                android:icon="@drawable/ic_import"
                android:title="@string/action_category_import" />

            <item
                android:id="@+id/action_category_edit"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/action_category_edit" />

            <item
                android:id="@+id/action_category_export"
                android:icon="@drawable/ic_export"
                android:title="@string/action_category_export" />

            <item
                android:id="@+id/action_save_all"
                android:icon="@android:drawable/ic_menu_save"
                android:title="@string/action_save_all" />

            <item
                android:id="@+id/action_category_delete"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/action_category_delete" />
        </menu>
    </item>

    <item
        android:id="@+id/action_batch"
        android:icon="@drawable/ic_batch"
        android:title="@string/action_batch"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/action_batch_sequence"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:title="@string/action_batch_sequence" />
        </menu>
    </item>

    <item
        android:id="@+id/action_resume_all"
        android:title="@string/action_resume_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pause_all"
        android:title="@string/action_pause_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_offline"
        android:checkable="true"
        android:title="@string/action_offline"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
        <!-- android:orderInCategory="100" -->

    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never" />
        <!-- android:orderInCategory="100" -->

    <!-- selection mode -->

    <item
        android:id="@+id/action_start"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/action_start"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_pause"
        android:icon="@android:drawable/ic_media_pause"
        android:title="@string/action_pause"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_select_all"
        android:title="@android:string/selectAll"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_download_delete"
        android:visible="false"
        app:showAsAction="never" >
        <menu>
            <item
                android:id="@+id/action_delete_recycle"
                android:title="@string/menu_download_delete_recycle" />

            <item
                android:id="@+id/action_delete_data"
                android:title="@string/menu_download_delete_data" />

            <item
                android:id="@+id/action_delete_file"
                android:title="@string/menu_download_delete_file" />
        </menu>
    </item>

</menu>
