<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_sort"
        android:title="@string/pref_sort"
        android:summary="@string/pref_sort_summary"
        android:entries="@array/pref_sort_entrie_array"
        android:entryValues="@array/pref_sort_entrie_values"
        android:defaultValue="@string/pref_sort_entrie_default"
        android:dialogTitle="@string/pref_sort" />

    <EditTextPreference
        android:key="pref_autosave_interval"
        android:defaultValue="1"
        android:numeric="integer"
        android:title="@string/pref_autosave_interval"
        android:summary="@string/pref_autosave_interval_summary"
        android:dialogTitle="@string/pref_autosave_interval_summary" />

</PreferenceScreen>