<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_category_new"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_category_new" />

    <item
        android:id="@+id/action_category_import"
        android:icon="@drawable/ic_import"
        android:title="@string/action_category_import" />

    <item
        android:id="@+id/action_category_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_category_edit" />

    <item
        android:id="@+id/action_category_export"
        android:icon="@drawable/ic_export"
        android:title="@string/action_category_export" />

    <item
        android:id="@+id/action_category_delete"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_category_delete" />

</menu>
